added build out build folder
added build out build folder

--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "homepage": "https://github.com/jbsario/jbsario.github.io",
+  "predeploy": "npm run build",
+   "deploy": "gh-pages -d build",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
